erDiagram
    USER ||--o{ USER_ROLE : "memiliki"
    USER ||--o| STORE : "punya (jika seller)"
    USER ||--o| WALLET : "punya (jika buyer)"
    USER ||--o{ ADDRESS : "punya"
    USER ||--o{ APP_REVIEW : "menulis (opsional)"
    USER ||--o{ VOUCHER : "dibuat oleh admin"
    USER ||--o{ PROMO : "dibuat oleh admin"

    STORE ||--o{ PRODUCT : "menjual"
    STORE ||--o{ ORDER : "menerima"

    PRODUCT ||--o{ CART_ITEM : "ada di"
    PRODUCT ||--o{ ORDER_ITEM : "dipesan sebagai"

    USER ||--o| CART : "memiliki"
    CART ||--o{ CART_ITEM : "berisi"
    CART }o--|| STORE : "terikat 1 toko (single-store rule)"

    USER ||--o{ ORDER : "membuat (sebagai buyer)"
    ORDER ||--o{ ORDER_ITEM : "berisi"
    ORDER ||--o{ ORDER_STATUS_HISTORY : "mencatat"
    ORDER ||--o| DELIVERY_JOB : "menghasilkan"
    ORDER }o--o| VOUCHER : "memakai (opsional)"
    ORDER }o--o| PROMO : "memakai (opsional)"

    WALLET ||--o{ WALLET_TRANSACTION : "mencatat"
    ORDER ||--o{ WALLET_TRANSACTION : "memicu (charge/refund)"

    DELIVERY_JOB }o--|| ORDER : "untuk"
    DELIVERY_JOB }o--o| USER : "diambil driver"

    USER {
        uuid id PK
        string username UK
        string password_hash
        string email
        string phone
        datetime created_at
    }

    USER_ROLE {
        uuid id PK
        uuid user_id FK
        string role_type "ADMIN | SELLER | BUYER | DRIVER"
        datetime created_at
    }

    STORE {
        uuid id PK
        uuid seller_user_id FK
        string store_name UK
        string description
        datetime created_at
    }

    PRODUCT {
        uuid id PK
        uuid store_id FK
        string name
        string description
        decimal price
        int stock
        datetime created_at
    }

    ADDRESS {
        uuid id PK
        uuid buyer_user_id FK
        string label
        string recipient_name
        string phone
        string full_address
        boolean is_default
    }

    WALLET {
        uuid id PK
        uuid buyer_user_id FK
        decimal balance
        datetime updated_at
    }

    WALLET_TRANSACTION {
        uuid id PK
        uuid wallet_id FK
        uuid order_id FK "nullable"
        string type "TOPUP | CHECKOUT_CHARGE | REFUND"
        decimal amount
        datetime created_at
    }

    CART {
        uuid id PK
        uuid buyer_user_id FK
        uuid store_id FK "nullable, terisi saat item pertama ditambahkan"
        datetime updated_at
    }

    CART_ITEM {
        uuid id PK
        uuid cart_id FK
        uuid product_id FK
        int quantity
    }

    ORDER {
        uuid id PK
        uuid buyer_user_id FK
        uuid store_id FK
        uuid address_id FK
        uuid voucher_id FK "nullable"
        uuid promo_id FK "nullable"
        string delivery_method "INSTANT | NEXT_DAY | REGULAR"
        decimal subtotal
        decimal discount_amount
        decimal delivery_fee
        decimal ppn_amount
        decimal final_total
        string current_status "SEDANG_DIKEMAS | MENUNGGU_PENGIRIM | SEDANG_DIKIRIM | PESANAN_SELESAI | DIKEMBALIKAN"
        boolean is_refunded
        boolean is_stock_restored
        datetime sla_deadline
        datetime created_at
    }

    ORDER_ITEM {
        uuid id PK
        uuid order_id FK
        uuid product_id FK
        string product_name_snapshot
        decimal price_snapshot
        int quantity
    }

    ORDER_STATUS_HISTORY {
        uuid id PK
        uuid order_id FK
        string status
        string changed_by_role
        datetime changed_at
    }

    VOUCHER {
        uuid id PK
        uuid created_by_admin_id FK
        string code UK
        string discount_type "PERCENT | FIXED"
        decimal discount_value
        int usage_limit
        int usage_remaining
        datetime expiry_date
    }

    PROMO {
        uuid id PK
        uuid created_by_admin_id FK
        string code UK
        string discount_type "PERCENT | FIXED"
        decimal discount_value
        datetime expiry_date
    }

    DELIVERY_JOB {
        uuid id PK
        uuid order_id FK
        uuid driver_user_id FK "nullable sampai diambil"
        string status "AVAILABLE | TAKEN | COMPLETED"
        decimal driver_earning
        datetime taken_at
        datetime completed_at
    }

    APP_REVIEW {
        uuid id PK
        uuid user_id FK "nullable, boleh guest"
        string reviewer_name
        int rating "1-5"
        string comment
        datetime created_at
    }
